--- a/index.html
+++ b/index.html
@@ -66,13 +66,10 @@
   }
   .dt{font-size:12px;color:var(--muted)}
   .wx{display:flex;align-items:center;gap:8px}
-
-  /* per-day icon tint (clouds + light/mod rain = green) */
   .ico{width:26px;height:26px;display:inline-block;filter:drop-shadow(0 0 2px #0008)}
   .ico.good{color:var(--good)}
   .ico.warn{color:var(--warn)}
   .ico.bad{color:var(--bad)}
-
   .t{font-weight:600}
   .tiny{font-size:12px;color:var(--muted)}
   footer{padding:14px 16px;color:var(--muted);font-size:12px}
@@ -82,7 +79,11 @@
 <body>
 <header>
   <h1>UK Trekking Dashboard – Live Weather</h1>
-  <div class="sub">Sorted by suitability · Per-day coloured icons · Data: <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open-Meteo</a> · <a href="./regions_map.html">Map view</a></div>
+  <div class="sub">
+    Sorted by suitability · Per-day coloured icons · Data:
+    <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open-Meteo</a> ·
+    <a href="./regions_map.html">Map view</a>
+  </div>
 </header>
 
 <section class="grid" id="cards"></section>
@@ -94,82 +95,77 @@
 <script>
 /* -------- Regions (Upper Basildon removed) -------- */
 const regions = [
-  { name:"South Downs & Chilterns",    lat:51.000,  lon:-0.900 },
-  { name:"Peak District (Edale)",      lat:53.364,  lon:-1.816 },
+  { name:"South Downs & Chilterns", lat:51.000, lon:-0.900 },
+  { name:"Peak District (Edale)", lat:53.364, lon:-1.816 },
   { name:"Snowdonia / Eryri (Llanberis)", lat:53.118, lon:-4.127 },
-  { name:"Lake District (Keswick)",    lat:54.6039, lon:-3.1347 },
-  { name:"Yorkshire Dales (Settle)",   lat:54.068,  lon:-2.278 },
+  { name:"Lake District (Keswick)", lat:54.6039, lon:-3.1347 },
+  { name:"Yorkshire Dales (Settle)", lat:54.068, lon:-2.278 },
   { name:"Forest of Bowland (Dunsop Bridge)", lat:53.943, lon:-2.502 },
   { name:"Brecon Beacons (Storey Arms)", lat:51.885, lon:-3.471 },
-  { name:"North York Moors (Helmsley)",lat:54.245,  lon:-1.056 },
-  { name:"Dartmoor (Princetown)",      lat:50.546,  lon:-3.990 },
-  { name:"Exmoor (Simonsbath)",        lat:51.120,  lon:-3.690 },
-  { name:"Norfolk Broads (Wroxham)",   lat:52.710,  lon: 1.410 }
+  { name:"North York Moors (Helmsley)", lat:54.245, lon:-1.056 },
+  { name:"Dartmoor (Princetown)", lat:50.546, lon:-3.990 },
+  { name:"Exmoor (Simonsbath)", lat:51.120, lon:-3.690 },
+  { name:"Norfolk Broads (Wroxham)", lat:52.710, lon:1.410 }
 ];
 
-/* -------- Icons (inline SVG; uses currentColor) -------- */
+/* -------- Icons using currentColor -------- */
 const I={
-  sun:'<svg viewBox="0 0 24 24" class="svg" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><g opacity=".9"><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></g></svg>',
-  cloud:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4S20.2 18 18 18z"/></svg>',
-  rain:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95"><path d="M7 16l-1 3m5-3l-1 3m5-3l-1 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
-  drizzle:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><path d="M7 16l-.6 1.5m4.6-1.5l-.6 1.5m4.6-1.5l-.6 1.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
-  storm:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M10 16l-2 5 5-3-2 5" stroke="currentColor" stroke-width="1.8" fill="none" stroke-linejoin="round"/></svg>',
-  snow:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95"><circle cx="7" cy="17" r="1.2" fill="currentColor"/><circle cx="12" cy="17" r="1.2" fill="currentColor"/><circle cx="17" cy="17" r="1.2" fill="currentColor"/></g></svg>'
+  sun:'<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><g opacity=".9"><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></g></svg>',
+  cloud:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4S20.2 18 18 18z"/></svg>',
+  rain:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M7 16l-1 3m5-3l-1 3m5-3l-1 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></svg>',
+  drizzle:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M7 16l-.6 1.5m4.6-1.5l-.6 1.5m4.6-1.5l-.6 1.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></svg>',
+  storm:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M10 16l-2 5 5-3-2 5" stroke="currentColor" stroke-width="1.8" fill="none" stroke-linejoin="round"/></svg>',
+  snow:'<svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><circle cx="7" cy="17" r="1.2"/><circle cx="12" cy="17" r="1.2"/><circle cx="17" cy="17" r="1.2"/></svg>'
 };
 function iconKey(code){
   if([0].includes(code)) return 'sun';
-  if([1,2,3].includes(code)) return 'cloud';
-  if([45,48].includes(code)) return 'cloud';     // fog, treat as cloud icon
+  if([1,2,3,45,48].includes(code)) return 'cloud';
   if([51,53,55,56,57].includes(code)) return 'drizzle';
   if([61,63,65,80,81,82].includes(code)) return 'rain';
-  if([66,67].includes(code)) return 'rain';      // heavy freezing rain
+  if([66,67].includes(code)) return 'rain';
   if([71,73,75,77,85,86].includes(code)) return 'snow';
   if([95,96,99].includes(code)) return 'storm';
   return 'cloud';
 }
 
-/* -------- Scoring (never zero; shows "<10") -------- */
+/* -------- Scoring -------- */
 function scoreSuitability({ wind, precip, tmax, tmin, cloud }){
-  let s = 100;
-  if (wind > 35) s -= (wind - 35) * 0.8;
-  if (wind > 50) s -= (wind - 50) * 0.7;
-  if (precip > 0)  s -= Math.min(precip, 10) * 1.0;
-  if (precip > 10) s -= (precip - 10) * 2.0;
-  if (tmax < 2 || tmin < -2) s -= 10;
-  if (tmax > 24) s -= (tmax - 24) * 1.0;
-  if (cloud > 90) s -= 3;
-  s = Math.round(Math.max(5, Math.min(100, s)));
-  const show = s <= 10 ? "<10" : s;
-  const label = s >= 75 ? "Very good" : s >= 55 ? "Good" : s >= 40 ? "Fair" : "High risk";
-  const cls = s >= 55 ? "good" : s >= 40 ? "warn" : "bad";
-  return { s, show, label, cls };
+  let s=100;
+  if(wind>35)s-=(wind-35)*0.8;
+  if(wind>50)s-=(wind-50)*0.7;
+  if(precip>0)s-=Math.min(precip,10)*1.0;
+  if(precip>10)s-=(precip-10)*2.0;
+  if(tmax<2||tmin<-2)s-=10;
+  if(tmax>24)s-=(tmax-24)*1.0;
+  if(cloud>90)s-=3;
+  s=Math.round(Math.max(5,Math.min(100,s)));
+  const show=s<=10?"<10":s;
+  const label=s>=75?"Very good":s>=55?"Good":s>=40?"Fair":"High risk";
+  const cls=s>=55?"good":s>=40?"warn":"bad";
+  return{ s,show,label,cls };
 }
 
-/* -------- Helper: tint class for the day's icon -------- */
+/* -------- Tint rule (clouds + light/medium rain = green) -------- */
 function iconTintByWeatherCode(code){
-  // Clouds and light/medium rain → green
   if([1,2,3,45,48].includes(code)) return 'good';
   if([51,53,55,56,57,61,63,65,80,81,82].includes(code)) return 'good';
-  // Heavy rain/ice, storms, snow → warn/bad
-  if([66,67].includes(code)) return 'warn';
-  if([71,73,75,77,85,86].includes(code)) return 'warn';
+  if([66,67,71,73,75,77,85,86].includes(code)) return 'warn';
   if([95,96,99].includes(code)) return 'bad';
   return 'good';
 }
 
-/* -------- Fetch & build -------- */
-const cardsEl = document.getElementById("cards");
-function el(tag, cls, txt){ const e=document.createElement(tag); if(cls) e.className=cls; if(txt) e.textContent=txt; return e; }
+/* -------- Build -------- */
+const cardsEl=document.getElementById("cards");
+function el(t,c,x){const e=document.createElement(t);if(c)e.className=c;if(x)e.textContent=x;return e;}
 
 async function fetchRegion(r){
-  const url = new URL("https://api.open-meteo.com/v1/forecast");
-  url.search = new URLSearchParams({
-    latitude:r.lat, longitude:r.lon, timezone:"auto",
+  const url=new URL("https://api.open-meteo.com/v1/forecast");
+  url.search=new URLSearchParams({
+    latitude:r.lat,longitude:r.lon,timezone:"auto",
     daily:"weather_code,temperature_2m_max,temperature_2m_min,precipitation_sum,wind_speed_10m_max",
-    forecast_days:6
-  }).toString();
-  const res = await fetch(url);
-  if(!res.ok) throw new Error("HTTP "+res.status);
+    forecast_days:6}).toString();
+  const res=await fetch(url);
+  if(!res.ok)throw new Error(res.status);
   return res.json();
 }
 
@@ -177,64 +173,61 @@ async function fetchRegion(r){
   const results=[];
   for(const r of regions){
     try{
-      const data = await fetchRegion(r);
-      const d = data.daily;
-      const today = scoreSuitability({
+      const data=await fetchRegion(r);
+      const d=data.daily;
+      const today=scoreSuitability({
         wind:d.wind_speed_10m_max[0],
         precip:d.precipitation_sum[0],
         tmax:d.temperature_2m_max[0],
         tmin:d.temperature_2m_min[0],
         cloud:[45,48].includes(d.weather_code[0])?95:([0].includes(d.weather_code[0])?15:60)
       });
-      results.push({ ...r, data, today });
+      results.push({...r,data,today});
     }catch(e){
-      results.push({ ...r, error:true, today:{s:5,show:"<10",label:"High risk",cls:"bad"} });
+      results.push({...r,error:true,today:{s:5,show:"<10",label:"High risk",cls:"bad"}});
     }
   }
-  results.sort((a,b)=> b.today.s - a.today.s);
+  results.sort((a,b)=>b.today.s-a.today.s);
   results.forEach(renderRegion);
 })();
 
 function renderRegion(r){
-  const card = el("div","card");
-  const top  = el("div","row");
-  const right= el("div","right");
-  right.append(el("span",`pill ${r.today.cls}`, r.today.label),
-               el("div",`badge ${r.today.cls}`, String(r.today.show)));
-  top.append(el("div","name", r.name), right);
+  const card=el("div","card");
+  const top=el("div","row");
+  const right=el("div","right");
+  right.append(el("span",`pill ${r.today.cls}`,r.today.label),
+               el("div",`badge ${r.today.cls}`,String(r.today.show)));
+  top.append(el("div","name",r.name),right);
   card.append(top);
 
   if(r.error){
     card.append(el("div","tiny","Couldn’t load data right now."));
-    cardsEl.append(card);
-    return;
+    cardsEl.append(card);return;
   }
 
-  const d = r.data.daily;
-  const kpis = el("div","kpis");
-  kpis.innerHTML =
-    `<div class='k'><span class='tiny'>Suitability</span><b>${r.today.label} (${r.today.show})</b></div>
-     <div class='k'><span class='tiny'>Temp (max/min)</span><b>${d.temperature_2m_max[0].toFixed(0)}° / ${d.temperature_2m_min[0].toFixed(0)}°</b></div>
-     <div class='k'><span class='tiny'>Wind (max)</span><b>${Math.round(d.wind_speed_10m_max[0])} km/h</b></div>
-     <div class='k'><span class='tiny'>Rain (sum)</span><b>${d.precipitation_sum[0].toFixed(1)} mm</b></div>`;
+  const d=r.data.daily;
+  const kpis=el("div","kpis");
+  kpis.innerHTML=
+   `<div class='k'><span class='tiny'>Suitability</span><b>${r.today.label} (${r.today.show})</b></div>
+    <div class='k'><span class='tiny'>Temp (max/min)</span><b>${d.temperature_2m_max[0].toFixed(0)}° / ${d.temperature_2m_min[0].toFixed(0)}°</b></div>
+    <div class='k'><span class='tiny'>Wind (max)</span><b>${Math.round(d.wind_speed_10m_max[0])} km/h</b></div>
+    <div class='k'><span class='tiny'>Rain (sum)</span><b>${d.precipitation_sum[0].toFixed(1)} mm</b></div>`;
   card.append(kpis);
 
-  const days = el("div","days");
-  const fmt = { weekday:"short" };
+  const days=el("div","days");
+  const fmt={weekday:"short"};
   for(let i=0;i<d.time.length;i++){
-    const cell = el("div","d");
-    const dt = new Date(d.time[i]);
-    cell.append(el("div","dt", dt.toLocaleDateString(undefined, fmt)));
-
-    const tintCls = iconTintByWeatherCode(d.weather_code[i]);
-    const wx = el("div","wx");
-    const ic = document.createElement("span");
-    ic.className = `ico ${tintCls}`;
-    ic.innerHTML = I[iconKey(d.weather_code[i])];
-
-    wx.append(ic, el("div","t", `${d.temperature_2m_max[i].toFixed(0)}° / ${d.temperature_2m_min[i].toFixed(0)}°`));
+    const cell=el("div","d");
+    const dt=new Date(d.time[i]);
+    cell.append(el("div","dt",dt.toLocaleDateString(undefined,fmt)));
+    const tintCls=iconTintByWeatherCode(d.weather_code[i]);
+    const wx=el("div","wx");
+    const ic=document.createElement("span");
+    ic.className=`ico ${tintCls}`;
+    ic.innerHTML=I[iconKey(d.weather_code[i])];
+    wx.append(ic,el("div","t",`${d.temperature_2m_max[i].toFixed(0)}° / ${d.temperature_2m_min[i].toFixed(0)}°`));
     cell.append(wx);
-    cell.append(el("div","tiny", `${d.precipitation_sum[i].toFixed(1)} mm · ${Math.round(d.wind_speed_10m_max[i])} km/h`));
+    cell.append(el("div","tiny",`${d.precipitation_sum[i].toFixed(1)} mm · ${Math.round(d.wind_speed_10m_max[i])} km/h`));
     days.append(cell);
   }
   card.append(days);
